# Encryption_algorithms_Task

./: CMakeLists.txt  README.md  main.cpp
UTIL/: BigInt.h  conversion.h  myBadBigInt.h
enc_algortihms/Crypto/: Crypto.cpp  Crypto.h
enc_algortihms/PlayFair/: PlayFair.cpp  PlayFair.h
enc_algortihms/RSA/: RSA.h
enc_algortihms/RSA/python/: main.py  prime_generation.py  test.py
enc_algortihms/RailFenceTrans/: railFenceTrans.cpp  railFenceTrans.h
enc_algortihms/keyless/: Keyless.cpp  Keyless.h
